Make fixed header on mobile nail view - to keep quesiton on top

--- a/src/app/main/nails/view.less
+++ b/src/app/main/nails/view.less
@@ -134,6 +134,23 @@
   }
 }
 
+.nail-fixed {
+  .nail-wrapper {
+    margin-top: 130px;
+    .nail-list-item .panel-body {
+      z-index: 1020;
+      background: #fff;
+
+      padding: 30px;
+
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+    }
+  }
+}
+
 //@media (min-width: 750px) {
   .nail-view-modal {
     .nail-list-item {
